# rust-dailybot

./: Cargo.toml  README.md  diesel.toml
migrations/2024-09-08-082251_create_items/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  store.rs
