[package]
name = "rust-dailybot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.39.2", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["mysql", "r2d2"] }
dotenvy = "0.15"
thiserror = "1.0"
mysqlclient-sys = { version = "0.4", features = ["bundled"] }